<resources>
    <string name="app_name">IMC Calculator</string>
    <string name="nameActivity">Prática02</string>
    <string name="name">Nome:</string>
    <string name="age">Idade:</string>
    <string name="weight">Peso (Kg):</string>
    <string name="height">Altura (m):</string>
    <string name="report">Relatório nutricional</string>
    <string name="imc">IMC:</string>
    <string name="classification">Classificação:</string>
    <string name="backToForm">Realizar novo cálculo</string>
</resources>