<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="#BAB4B4"
        android:gravity="bottom|start"
        android:text="@string/nameActivity"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/reportText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="101dp"
        android:text="@string/report"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reportText"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewName"
        android:layout_marginLeft="100dp"
        android:layout_toEndOf="@+id/textViewName"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/age"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameText"
        android:layout_alignTop="@+id/textViewAge"
        android:layout_toEndOf="@+id/textViewAge"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAge"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/weight"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ageText"
        android:layout_alignTop="@+id/textViewWeight"
        android:layout_toEndOf="@+id/textViewWeight"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWeight"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/height"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/weightText"
        android:layout_alignTop="@+id/textViewHeight"
        android:layout_toEndOf="@+id/textViewHeight"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeight"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/imc"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/heightText"
        android:layout_alignTop="@+id/textViewImc"
        android:layout_toEndOf="@+id/textViewImc"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewImc"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/classification"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imcText"
        android:layout_alignTop="@+id/textViewCategory"
        android:layout_toEndOf="@+id/textViewCategory"
        android:textSize="23sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCategory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:onClick="goBackToForm"
        android:text="@string/backToForm"
        android:textSize="20sp" />


</RelativeLayout>